internal/testdata/mods/error-conditions/invalid-syntax/mod.pp
mod "error_invalid_syntax" {
  title = "Error Test: Invalid Syntax"
}
